[package]
name = "convert-byte-size-string"
version = "1.1.1"
authors = ["demize <demize@unstable.systems>"]
edition = "2018"
license-file = "LICENSE"
description = "Convert a byte size string to a u128 value."
repository = "https://github.com/demize/convert-byte-size-string"
readme = "README.md"

[dependencies]
